log
Tue 14 May 2024 10:35:07 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
804326b
Tue 14 May 2024 10:37:09 PM UTC: 
 sudoku.c | 48 ++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 48 insertions(+)
 tests:  5|3
total_score: 35/70
b5b0f1c
Tue 14 May 2024 10:37:57 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
548a88a
Tue 14 May 2024 10:40:16 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
8deabce
Tue 14 May 2024 10:46:44 PM UTC: 
 sudoku.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
240ca66
Tue 14 May 2024 10:47:09 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 45/70
423b3d8
Tue 14 May 2024 10:49:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
796cc6a
Tue 14 May 2024 10:52:13 PM UTC: 
 sudoku.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:132:30: error: implicit declaration of function ‘is_node_in_list’ [-Werror=implicit-function-declaration]
  132 |                         if (!is_node_in_list(list, new_node)) { // Check if node already exists in list
      |                              ^~~~~~~~~~~~~~~
sudoku.c: In function ‘is_node_in_list’:
sudoku.c:151:13: error: implicit declaration of function ‘compare_nodes’ [-Werror=implicit-function-declaration]
  151 |         if (compare_nodes(current, n) == 1) {
      |             ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c17759
Tue 14 May 2024 10:52:31 PM UTC: 
 sudoku.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:132:30: error: implicit declaration of function ‘is_node_in_list’ [-Werror=implicit-function-declaration]
  132 |                         if (!is_node_in_list(list, new_node)) { // Check if node already exists in list
      |                              ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
89f6f87
Tue 14 May 2024 10:52:45 PM UTC: 
 sudoku.c | 44 ++++++++++++++++++++++----------------------
 1 file changed, 22 insertions(+), 22 deletions(-)
 tests:  6|2
total_score: 45/70
304dce6
Tue 14 May 2024 10:52:58 PM UTC: 
 sudoku.c | 38 +++++++-------------------------------
 1 file changed, 7 insertions(+), 31 deletions(-)
 tests:  6|2
total_score: 45/70
0926e9c
Tue 14 May 2024 10:56:36 PM UTC: 
 sudoku.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  4|3
total_score: 30/70
37cf214
Tue 14 May 2024 10:57:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
8a5cce5
Tue 14 May 2024 10:58:47 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
1f40746
Tue 14 May 2024 11:00:15 PM UTC: 
 sudoku.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  1|4
total_score: 10/70
64eb46c
Tue 14 May 2024 11:00:30 PM UTC: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
92898d3
Tue 14 May 2024 11:02:41 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
eed9412
Thu 16 May 2024 01:48:20 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
1741c37
Thu 16 May 2024 01:56:12 PM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  0|0
064583c
Thu 16 May 2024 01:57:10 PM UTC: 
 sudoku.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  10|0
total_score: 70/70
f91845e
Thu 16 May 2024 01:57:32 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  10|0
total_score: 70/70
b156150
Thu 16 May 2024 01:57:43 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
d794531
Thu 16 May 2024 02:05:27 PM UTC: 
 sudoku.c | 35 ++++++++++++++++++-----------------
 1 file changed, 18 insertions(+), 17 deletions(-)
 tests:  10|0
total_score: 70/70
cc7dfd8
Sun 19 May 2024 03:06:00 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|0
total_score: 70/70
09bc9a1
Sun 19 May 2024 03:07:23 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:165:30: error: void value not ignored as it ought to be
  165 |         Node* current_node = pop(stack);
      |                              ^~~
Compilation failed
ac639a1
